--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,33 @@ h1, h2 {
     float: left;
     font-size: 300%;
 }
+
+/* Navigation links */
+
+#menu {
+    font-size: 120%;
+    letter-spacing: 1px;
+}
+
+#menu, #logo {
+    line-height: 70px;
+}
+
+#menu a:hover {
+    font-size: 120%;
+}
+
+.active {
+    border-bottom: 1px solid #4C5457;
+}
+
+#menu li {
+    list-style-type: none;
+    margin-right: 30px;
+    float: right;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
