--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,32 @@ h1, h2 {
     text-decoration: none;
     color: inherit;
 }
+
+/* Hero Image */
+
+#logo-image {
+    height: 600px;
+    width: 100%;
+    background: url("../images/Air-Jordan-Logo.jpg") no-repeat center center;
+
+    animation-name: logo-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+#logo-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
+/* Logo Animation */
+
+@keyframes logo-zoom {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
