--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,3 +221,14 @@ footer{
         clear: both;
     }
 }
+
+/* For Medium Screen sizes */
+@media screen and (max-width: 950px) {
+    #menu {
+        float: left;
+        clear: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+}
