--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,12 +76,8 @@ span {
 #logo-outer {
     height: 500px;
     width: 100%;
-    position: relative;
     overflow: hidden;
-}
-
-#cover-text, #cover-text h2 {
-    color: #EBEBEB;
+    position: relative;
 }
 
 /* Logo Animation */
@@ -95,21 +91,19 @@ span {
     }
 }
 
+#cover-text h2 {
+    color: #EBEBEB;
+}
+
 #cover-text {
-    font-size: 300%;
     font-family: Yellowtail, sans-serif;
+    font-size: 210%;
     letter-spacing: 1px;
     
-    width: 1100px;
-    height: 100px;
-
-    padding-top: 40px;
-    padding-left: 10px;
-
-    bottom: 200px;
-    right: 150px;
     position: absolute;
-
+    top: 45%;
+    left: 46%;
+    transform: translate(-45%, -46%);
 }
 
 /* History Section */
@@ -222,7 +216,7 @@ footer{
     }
 }
 
-/* For Medium Screen sizes */
+/* For Medium/Small screen sizes */
 @media screen and (max-width: 950px) {
     #menu {
         float: left;
@@ -230,5 +224,29 @@ footer{
         margin-left: 30px;
         margin-bottom: 20px;
         line-height: 25px;
+    }
+
+    #cover-text {
+        left: 0;
+        font-size: 135%;
+    }
+
+    #history {
+        width: 90%;
+        height: 950px;
+        margin: 0 auto;
+    }
+
+    .center-1-heading, .center-2-heading {
+        width: inherit;
+    }
+
+    .center-1-heading h2, .center-2-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .center-1-heading p, .center-2-heading p {
+        padding: 0 20px;
+        text-align: center;
     }
 }
