--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,10 +119,11 @@ span {
 }
 
 .center-1 {
-    width: 100%;
-    line-height: 20px;
-    margin-bottom: 50px;
+    margin: auto;
+    width: 80%;
+    padding: 10px;
 }
+
 .center-1 h2 {
     text-align: center;
 }
@@ -132,10 +133,11 @@ span {
 }
 
 .center-2 {
-    width: 100%;
-    line-height: 20px;
-    margin-bottom: 50px;
+    margin: auto;
+    width: 80%;
+    padding: 10px;
 }
+
 .center-2 h2 {
     text-align: center;
 }
@@ -183,7 +185,7 @@ footer{
 /* For Large/Medium screen sizes */
 @media screen and (max-width: 1200px) {
     #history {
-        height: 1200px;
+        height: 500px;
         width: 65%;
         margin: 0 auto;
     }
@@ -194,16 +196,23 @@ footer{
     }
 
     #center-1, #center-2 {
-        width: 100%;
+        width: 80%;
         margin: 0;
         padding: 30px 0;
         clear: both;
     }
-}
 
 /* For Medium/Small screen sizes */
 @media screen and (max-width: 950px) {
+
+    #logo {
+        font-size: 400%;
+        margin-left: 10px;
+        margin-bottom: 20px;
+    }
+
     #menu {
+        font-size: 100%;
         float: left;
         clear: left;
         margin-left: 30px;
@@ -212,26 +221,29 @@ footer{
     }
 
     #cover-text {
-        left: 0;
+        margin: 0 auto;
         font-size: 135%;
     }
 
     #history {
         width: 90%;
-        height: 950px;
+        height: 800px;
         margin: 0 auto;
     }
 
-    .center-1-heading, .center-2-heading {
-        width: inherit;
+    .center-1 h2, .center-2 h2 {
+        width: 100%;
     }
 
-    .center-1-heading h2, .center-2-heading h2 {
+    .center-1 p, .center-2 p {
         width: 100%;
         text-align: center;
     }
-    .center-1-heading p, .center-2-heading p {
-        padding: 0 20px;
-        text-align: center;
+
+    #social {
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        overflow: hidden;
     }
 }
