--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,13 @@ body {
 
 /* Logo and Headings */
 
-h1, h2 {
+h1,
+h2 {
     font-family: Yellowtail, sans-serif;
     letter-spacing: 1px;
     color: #4C5457;
 }
+
 span {
     color: #CC142D;
 }
@@ -37,7 +39,8 @@ span {
     letter-spacing: 1px;
 }
 
-#menu, #logo {
+#menu,
+#logo {
     line-height: 70px;
 }
 
@@ -86,6 +89,7 @@ span {
     from {
         transform: scale(1);
     }
+
     to {
         transform: scale(1.1);
     }
@@ -99,7 +103,7 @@ span {
     font-family: Yellowtail, sans-serif;
     font-size: 210%;
     letter-spacing: 1px;
-    
+
     position: absolute;
     top: 45%;
     left: 46%;
@@ -148,7 +152,7 @@ span {
 
 /* Social Section */
 
-footer{
+footer {
     height: 150px;
 }
 
@@ -156,7 +160,7 @@ footer{
     text-align: center;
 }
 
-.social-media > li {
+.social-media>li {
     display: inline;
 }
 
@@ -195,55 +199,58 @@ footer{
         padding: 30px 0;
     }
 
-    #center-1, #center-2 {
+    #center-1,
+    #center-2 {
         width: 80%;
         margin: 0;
         padding: 30px 0;
         clear: both;
     }
+}
 
-/* For Medium/Small screen sizes */
-@media screen and (max-width: 950px) {
+    /* For Medium/Small screen sizes */
+    @media screen and (max-width: 950px) {
+        #logo {
+            font-size: 400%;
+            margin-left: 10px;
+            margin-bottom: 20px;
+        }
 
-    #logo {
-        font-size: 400%;
-        margin-left: 10px;
-        margin-bottom: 20px;
-    }
+        #menu {
+            font-size: 100%;
+            float: left;
+            clear: left;
+            margin-left: 30px;
+            margin-bottom: 20px;
+            line-height: 25px;
+        }
 
-    #menu {
-        font-size: 100%;
-        float: left;
-        clear: left;
-        margin-left: 30px;
-        margin-bottom: 20px;
-        line-height: 25px;
-    }
+        #cover-text {
+            margin: 0 auto;
+            font-size: 135%;
+        }
 
-    #cover-text {
-        margin: 0 auto;
-        font-size: 135%;
-    }
+        #history {
+            width: 90%;
+            height: 800px;
+            margin: 0 auto;
+        }
 
-    #history {
-        width: 90%;
-        height: 800px;
-        margin: 0 auto;
-    }
+        .center-1 h2,
+        .center-2 h2 {
+            width: 100%;
+        }
 
-    .center-1 h2, .center-2 h2 {
-        width: 100%;
-    }
+        .center-1 p,
+        .center-2 p {
+            width: 100%;
+            text-align: center;
+        }
 
-    .center-1 p, .center-2 p {
-        width: 100%;
-        text-align: center;
-    }
-
-    #social {
-        width: 100%;
-        background-size: cover;
-        background-position: center;
-        overflow: hidden;
-    }
+        #social {
+            width: 100%;
+            background-size: cover;
+            background-position: center;
+            overflow: hidden;
+        }
 }
