--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ span {
 
 #menu,
 #logo {
-    line-height: 70px;
+    line-height: 4.375rem;
 }
 
 #menu a:hover {
@@ -67,7 +67,7 @@ span {
 /* Hero Image */
 
 #logo-image {
-    height: 500px;
+    height: 31.25rem;
     width: 100%;
     background: url("../images/Air-Jordan-Logo.jpg") no-repeat center center;
 
@@ -77,7 +77,7 @@ span {
 }
 
 #logo-outer {
-    height: 500px;
+    height: 31.25rem;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -113,7 +113,7 @@ span {
 /* History Section */
 
 #history {
-    height: 500px;
+    height: 31.25rem;
 }
 
 #brand {
@@ -153,7 +153,7 @@ span {
 /* Social Section */
 
 footer {
-    height: 150px;
+    height: 9.375rem;
 }
 
 .social-media {
@@ -189,7 +189,7 @@ footer {
 /* For Large/Medium screen sizes */
 @media screen and (max-width: 1200px) {
     #history {
-        height: 500px;
+        height: 31.25rem;
         width: 65%;
         margin: 0 auto;
     }
@@ -222,7 +222,7 @@ footer {
             clear: left;
             margin-left: 30px;
             margin-bottom: 20px;
-            line-height: 25px;
+            line-height: 1.563rem;
         }
 
         #cover-text {
@@ -232,7 +232,7 @@ footer {
 
         #history {
             width: 90%;
-            height: 800px;
+            height: 50rem;
             margin: 0 auto;
         }
 
