Add smaller screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ span {
 
 #menu,
 #logo {
-    line-height: 4.375rem;
+    line-height: 4rem;
 }
 
 #menu a:hover {
@@ -67,7 +67,7 @@ span {
 /* Hero Image */
 
 #logo-image {
-    height: 31.25rem;
+    height: 31rem;
     width: 100%;
     background: url("../images/Air-Jordan-Logo.jpg") no-repeat center center;
 
@@ -77,7 +77,7 @@ span {
 }
 
 #logo-outer {
-    height: 31.25rem;
+    height: 31rem;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -113,7 +113,7 @@ span {
 /* History Section */
 
 #history {
-    height: 31.25rem;
+    height: 31rem;
 }
 
 #brand {
@@ -153,7 +153,7 @@ span {
 /* Social Section */
 
 footer {
-    height: 9.375rem;
+    height: 9rem;
 }
 
 .social-media {
@@ -189,7 +189,7 @@ footer {
 /* For Large/Medium screen sizes */
 @media screen and (max-width: 1200px) {
     #history {
-        height: 31.25rem;
+        height: 31rem;
         width: 65%;
         margin: 0 auto;
     }
@@ -222,7 +222,7 @@ footer {
             clear: left;
             margin-left: 30px;
             margin-bottom: 20px;
-            line-height: 1.563rem;
+            line-height: 1.5rem;
         }
 
         #cover-text {
@@ -253,4 +253,13 @@ footer {
             background-position: center;
             overflow: hidden;
         }
+
+    /* For Small screen sizes */
+    @media screen and (max-width: 300px) {
+        #history {
+            width: 90%;
+            height: 30rem;
+            margin: 0 auto;
+        }
+    }
 }
