--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,11 @@ span {
 /* Social Section */
 
 footer {
-    height: 9rem;
+    height: 10rem;
+}
+
+#social {
+    background: #4C5457;
 }
 
 .social-media {
@@ -165,23 +169,14 @@ footer {
 }
 
 .social-media i {
-    font-size: 200%;
-    margin: 1%;
-    padding: 5%;
+    font-size: 180%;
+    margin: 0 1%;
+    padding: 4%;
     color: #EBEBEB;
 }
 
 .social-media i:hover {
     color: #CC142D;
-}
-
-#social {
-    background-image: url(../images/jordan-13.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    overflow: hidden;
 }
 
 /* Media queries */
@@ -245,13 +240,6 @@ footer {
         .center-2 p {
             width: 100%;
             text-align: center;
-        }
-
-        #social {
-            width: 100%;
-            background-size: cover;
-            background-position: center;
-            overflow: hidden;
         }
 
     /* For Small screen sizes */
