--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,12 +163,16 @@ span {
 /* Sneakers Section */
 
 #sneakers {
-    clear: both;
     column-count: 3;
+    clear: both;
+    margin-left: 30px;
+    margin-bottom: 40px;
+    line-height: 3;
+    
 }
 
 #photos > img {
-    width: 90%;
+    width: 100%;
 }
 
 /* Social Section */
@@ -263,12 +267,20 @@ footer {
             text-align: center;
         }
 
+        #sneakers {
+            column-count: 2;
+        }
+
     /* For Small screen sizes */
     @media screen and (max-width: 640px) {
         #history {
             width: 100%;
             height: 40rem;
             margin: 0 auto;
+        }
+
+        #sneakers {
+            column-count: 1;
         }
     }
 }
