--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,211 +1,167 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&family=Yellowtail&display=swap');
-
 * {
     margin: 0;
     padding: 0;
     border: none;
-
 }
-
 body {
-    font-family: Raleway, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 200;
     color: #26292C;
 }
-
 /* Logo and Headings */
-
 h1,
 h2 {
-    font-family: Yellowtail, sans-serif;
+    font-family: 'Yellowtail', sans-serif;
     letter-spacing: 1px;
     color: #4C5457;
 }
-
 span {
     color: #CC142D;
 }
-
 #logo {
     font-size: 300%;
     margin-left: 25px;
     float: left;
 }
-
 /* Navigation links */
-
 #menu {
     font-size: 120%;
     letter-spacing: 1px;
 }
-
 #menu,
 #logo {
     line-height: 4rem;
 }
-
 #menu a:hover {
-    font-size: 120%;
+    /* font-size: 120%; */
     color: #CC142D;
 }
-
 .active {
     border-bottom: 1px solid #CC142D;
 }
-
 #menu li {
     list-style-type: none;
     margin-right: 30px;
     float: right;
 }
-
 #menu a {
     text-decoration: none;
     color: inherit;
 }
-
 /* Hero Image */
-
 #logo-image {
     height: 31rem;
     width: 100%;
     background: url("../images/Air-Jordan-Logo.jpg") no-repeat center center;
-
     animation-name: logo-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
-
 #logo-outer {
     height: 31rem;
     width: 100%;
     overflow: hidden;
     position: relative;
 }
-
 /* Logo Animation */
-
 @keyframes logo-zoom {
     from {
         transform: scale(1);
     }
-
     to {
         transform: scale(1.1);
     }
 }
-
 #cover-text h2 {
     color: #EBEBEB;
 }
-
 #cover-text {
     font-family: Yellowtail, sans-serif;
     font-size: 210%;
     letter-spacing: 1px;
-
     position: absolute;
     top: 45%;
     left: 46%;
     transform: translate(-45%, -46%);
 }
-
 /* History Section */
-
 #history {
     height: 25rem;
 }
-
 #brand {
     text-align: center;
     margin: 50px 0;
     font-size: 280%;
 }
-
 .center-1 {
     margin: auto;
     width: 80%;
     padding: 10px;
 }
-
 .center-1 h2 {
     text-align: center;
 }
-
 .center-1 p {
     text-align: center;
 }
-
 .center-2 {
     margin: auto;
     width: 80%;
     padding: 10px;
 }
-
 .center-2 h2 {
     text-align: center;
 }
-
 .center-2 p {
     text-align: center;
 }
-
 #jordan-1 h3 {
     text-align: center;
 }
-
 #jordan-1 {
     background: url('../images/original-jordan-1.jpg') no-repeat center center;
     height: 50rem;
     width: 100%;
 }
-
 /* Sneakers Section */
-
 #sneakers {
     column-count: 3;
     clear: both;
     margin-left: 30px;
     margin-bottom: 40px;
     line-height: 3;
-    
+    overflow: hidden;  
 }
-
+#sneakers img {
+  width: 100%;
+}
 #photos > img {
     width: 100%;
 }
-
 /* Social Section */
-
 footer {
     height: 10rem;
 }
-
 #social {
     background: #4C5457;
 }
-
 .social-media {
     text-align: center;
 }
-
 .social-media>li {
     display: inline;
 }
-
 .social-media i {
     font-size: 180%;
     margin: 0 1%;
     padding: 4%;
     color: #EBEBEB;
 }
-
 .social-media i:hover {
     color: #CC142D;
 }
-
 /* Media queries */
-
 /* For Large/Medium screen sizes */
 @media screen and (max-width: 1200px) {
     #history {
@@ -213,12 +169,10 @@ footer {
         width: 65%;
         margin: 0 auto;
     }
-
     #brand {
         margin: 0;
         padding: 30px 0;
     }
-
     #center-1,
     #center-2 {
         width: 80%;
@@ -227,60 +181,68 @@ footer {
         clear: both;
     }
 }
-
-    /* For Medium/Small screen sizes */
-    @media screen and (max-width: 950px) {
-        #logo {
-            font-size: 400%;
-            margin-left: 10px;
-            margin-bottom: 20px;
-        }
-
-        #menu {
-            font-size: 100%;
-            float: left;
-            clear: left;
-            margin-left: 30px;
-            margin-bottom: 20px;
-            line-height: 1.5rem;
-        }
-
-        #cover-text {
-            margin: 0 auto;
-            font-size: 135%;
-        }
-
-        #history {
-            width: 90%;
-            height: 30rem;
-            margin: 0 auto;
-        }
-
-        .center-1 h2,
-        .center-2 h2 {
-            width: 100%;
-        }
-
-        .center-1 p,
-        .center-2 p {
-            width: 100%;
-            text-align: center;
-        }
-
-        #sneakers {
-            column-count: 2;
-        }
-
-    /* For Small screen sizes */
-    @media screen and (max-width: 640px) {
-        #history {
-            width: 100%;
-            height: 40rem;
-            margin: 0 auto;
-        }
-
-        #sneakers {
-            column-count: 1;
-        }
+/* For Medium/Small screen sizes */
+@media screen and (max-width: 950px) {
+    #logo {
+        font-size: 400%;
+        margin-left: 10px;
+        margin-bottom: 20px;
     }
+    #menu {
+        font-size: 100%;
+        float: left;
+        clear: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 1.5rem;
+    }
+    #cover-text {
+        margin: 0 auto;
+        font-size: 135%;
+    }
+    #history {
+        width: 90%;
+        height: 30rem;
+        margin: 0 auto;
+    }
+    .center-1 h2,
+    .center-2 h2 {
+        width: 100%;
+    }
+    .center-1 p,
+    .center-2 p {
+        width: 100%;
+        text-align: center;
+    }
+    #sneakers {
+        column-count: 2;
+    }
+}
+/* For Small screen sizes */
+@media screen and (max-width: 640px) {
+    #history {
+        width: 100%;
+        height: 40rem;
+        margin: 0 auto;
+    }
+    #sneakers {
+        column-count: 1;
+        margin-left: 0;
+    }
+}
+/* For Small screen sizes */
+@media screen and (max-width: 607px) {
+  #logo {
+    font-size: 300%;
+  }
+}
+@media screen and (max-width: 470px) {
+  #logo {
+    font-size: 200%;
+  }
+}
+@media screen and (max-width: 321px) {
+  #logo {
+    font-size: 180%;
+  }
 }
