--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,16 +150,16 @@ span {
 }
 
 .signup-form {
-    margin: 300px 10px;
+    margin: 110px 10px;
     color: #EBEBEB;
     background-color: rgba(60, 60, 60, 0.6);
-    max-width: 1200px;
+    max-width: 750px;
     position: absolute;
-    left: 10%;
+    left: 20%;
     padding: 30px;
 }
 .signup-form h2 {
-    color: #ADAEAE;
+    color: #EBEBEB;
     margin-bottom: 20px;
 }
 
@@ -183,14 +183,14 @@ span {
     padding: 15px 32px 15px 32px;
     text-align: center;
     font-size: 100%;
-    background-color: #CC142D;
-    color: #EBEBEB;
+    background-color: #EBEBEB;
+    color: #4C5457;
     display: block;
 }
 
 .signup-button:hover {
-    background-color: #26292C;
-    color: #CC142D;
+    background-color: #CC142D;
+    color: #EBEBEB;
 }
 
 /* Social Section */
@@ -234,6 +234,11 @@ footer {
         padding: 30px 0;
         clear: both;
     }
+
+    .signup-form {
+        left: 10%;
+        right: 10%;
+    } 
 }
 /* For Medium/Small screen sizes */
 @media screen and (max-width: 950px) {
@@ -270,6 +275,10 @@ footer {
     }
     #sneakers {
         column-count: 2;
+    }
+
+    .signup-form {
+        left: 6%;
     }
 }
 /* For Small screen sizes */
