--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ span {
     column-count: 3;
     clear: both;
     margin-left: 30px;
+    margin-right: 30px;
     margin-bottom: 40px;
     line-height: 3;
     overflow: hidden;  
@@ -274,6 +275,7 @@ footer {
     }
     #sneakers {
         column-count: 2;
+        margin-right: 30px;
     }
 
     .signup-form {
@@ -289,7 +291,8 @@ footer {
     }
     #sneakers {
         column-count: 1;
-        margin-left: 0;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 }
 /* For Small screen sizes */
