--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,12 +209,19 @@ footer {
 .social-media i {
     font-size: 180%;
     margin: 0 1%;
-    padding: 4%;
+    padding: 3%;
     color: #26292C;
 }
 .social-media i:hover {
     color: #CC142D;
 }
+
+.copyright {
+    color: #EBEBEB;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 /* Media queries */
 /* For Large/Medium screen sizes */
 @media screen and (max-width: 1200px) {
